# frost-cli

./: .env  .gitignore  Cargo.toml  FROST_README_SUGGESTION.md  README.md  clear_data.sh  setup.sh
src/: commands.rs  comshare_serde.rs  config.rs  data.rs  main.rs  partial_sig_serde.rs  participant_serde.rs  public_key_serde.rs  publish.rs  secret_share_serde.rs  serde_mods.rs  serde_structs.rs  signer_serde.rs
tests/: test.rs
