[package]
name = "zama"
version = "0.1.0"
edition = "2021"

[dependencies]

clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
frost-dalek = "0.2.3"
curve25519-dalek = "3.2.1" # downgrade to 3.2.1 to match frost-dalek dependency version
rand = "0.7.3"# downgrade to 0.7.3 to match frost-dalek dependency version
hex = "0.4.3"
thiserror = "1.0"
anyhow = "1.0.92"
log = "0.4.22"
env_logger = "0.11.5"  # For simple console logging setup
sha2 = "0.9.9"
field-offset = "0.3"
serde_bytes = "0.11.15"
bincode = "1.3.3"
serde_with = "1.11"
tokio = { version = "1.41.0", features = ["full"] }
futures = "0.3.31"
base64 = "0.22.1"
predicates = "3.1.2"
itertools = "0.13.0"
fs2 = "0.4.3"
dotenv = "0.15.0"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }

[dev-dependencies]
assert_cmd = "2.0"
indoc = "2.0.5"